--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -10,9 +10,7 @@
         <li><%= link_to 'Compendium', compendium_path %></li>
       <% end %>
       <li><%= link_to 'Find a modder', modders_path %></li>
-      <% if !user_signed_in? %>
-        <li><%= link_to 'Get listed', new_user_registration_path %></li>
-      <% elsif current_modder.blank? %>
+      <% if user_signed_in? && current_modder.blank? %>
         <li><%= link_to 'Set up profile', edit_profile_path %></li>
       <% end %>
       <li class="close"><label for="menu-toggle" id="menu-close"><%= inline_svg_tag 'x.svg' %></label></li>
