--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -9,7 +9,7 @@
       <% if flag_enabled? :compendium %>
         <li><%= link_to 'Compendium', compendium_path %></li>
       <% end %>
-      <li><%= link_to 'Find a modder', modders_path %></li>
+      <li><%= link_to 'Modder search', modders_path %></li>
       <% if user_signed_in? && current_modder.blank? %>
         <li><%= link_to 'Set up profile', edit_profile_path %></li>
       <% end %>
