--- a/app/views/modders/index.html.erb
+++ b/app/views/modders/index.html.erb
@@ -41,7 +41,7 @@
       %>
     </div>
 
-    <div class="field">
+    <div class="field" style="margin-top: 32px;">
       <div class="checkbox">
         <input type="checkbox" id="services-visible" <%= @services_visible ? 'checked' : '' %>>
         <%= inline_svg_tag 'check.svg' %>
