--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,7 +1,7 @@
 <div class="intro" style="background-image:url(<%= image_path 'index-bg.jpg' %>)">
   <div class="content grid">
     <section class="span-8">
-      <h1>All about <strong>GameCube controllers</strong></h1>
+      <h1>All about <br><strong>GameCube controllers</strong></h1>
       <p class="big">Learn about modding GameCube controllers (GCCs) and connect with GCC modders and artists around the world. <a href="/about">About DOL-003.info</a>
     </section>
   </div>
@@ -10,7 +10,7 @@
 <div class="intro dark" style="background-image:url(<%= image_path 'index-bg-dark.jpg' %>)">
   <div class="content grid">
     <section class="span-8">
-      <h1>All about <strong>GameCube controllers</strong></h1>
+      <h1>All about <br><strong>GameCube controllers</strong></h1>
       <p class="big">Learn about modding GameCube controllers (GCCs) and connect with GCC modders and artists around the world. <a href="/about">About DOL-003.info</a>
     </section>
   </div>
