--- a/app/frontend/typography.scss
+++ b/app/frontend/typography.scss
@@ -72,6 +72,14 @@ h1,
 h2,
 h3 {
   font-weight: bold;
+
+  br {
+    display: none;
+
+    @include medium {
+      display: block;
+    }
+  }
 }
 
 h1 {
