--- a/app/frontend/entrypoints/application.scss
+++ b/app/frontend/entrypoints/application.scss
@@ -31,6 +31,10 @@ body.application.index {
       padding-top: 140px;
     }
 
+    h1 {
+      line-height: 1.3;
+    }
+
     strong {
       background-color: rgba($smoke, 75%);
       padding: 0 8px;
