--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 
     <title><%= page_title %></title>
     <meta name="description" content="<%= page_description %>">
-    <meta property="og:description" content="DOL-003.info is a repository of GameCube controller information and a directory of controller modders.">
+    <meta property="og:description" content="<%= page_description %>">
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
