--- a/app/frontend/entrypoints/compendium.scss
+++ b/app/frontend/entrypoints/compendium.scss
@@ -241,12 +241,22 @@ body.compendium.show {
       padding-left: 0;
     }
 
+    a[href^="http"] {
+      svg {
+        width: 12px;
+        height: 12px;
+        vertical-align: middle;
+        margin-left: 8px;
+        position: relative;
+        top: -1px;
+      }
+    }
+
     h2,
     h3 {
       position: relative;
       margin-left: -24px;
       padding-left: 24px;
-      // clear: both;
 
       > .section-anchor {
         position: absolute;
