--- a/app/frontend/header.scss
+++ b/app/frontend/header.scss
@@ -126,7 +126,7 @@ header {
             margin-left: 0;
             margin-top: 16px;
 
-            &.modder-selector {
+            &.quick-search {
               margin-top: 24px;
             }
           }
