pass in compendium domain

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -25,7 +25,8 @@
                   link: modder_url(modder, subdomain: '')
                 }
               end,
-              pages: Compendium.all_pages
+              pages: Compendium.all_pages,
+              compendium_domain: compendium_url
             }
           %>
         </li>
