--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -3,6 +3,25 @@
 
     <%= link_to 'DOL-003', root_url(subdomain: ''), class: 'logo' %>
 
+    <% if flag_enabled? :jump_to_modder %>
+      <div class="quick-search">
+        <%=
+          react_component 'QuickSearch', {
+            modders: Modder.active.map do |modder|
+              {
+                name: modder.name,
+                city: modder.city,
+                logo_url: modder.logo.present? ? modder.logo_url : nil,
+                link: modder_url(modder, subdomain: '')
+              }
+            end,
+            pages: Compendium.all_pages,
+            compendium_domain: compendium_url
+          }
+        %>
+      </div>
+    <% end %>
+
     <label for="menu-toggle" id="menu-toggle-button"><%= inline_svg_tag 'menu.svg' %></label>
     <input type="checkbox" id="menu-toggle">
     <ul class="menu">
@@ -14,23 +33,6 @@
         <li><%= link_to 'Set up profile', edit_profile_url(subdomain: '') %></li>
       <% end %>
       <li class="close"><label for="menu-toggle" id="menu-close"><%= inline_svg_tag 'x.svg' %></label></li>
-      <% if flag_enabled? :jump_to_modder %>
-        <li class="quick-search">
-          <%=
-            react_component 'QuickSearch', {
-              modders: Modder.active.map do |modder|
-                {
-                  name: modder.name,
-                  logo_url: modder.logo.present? ? modder.logo_url : nil,
-                  link: modder_url(modder, subdomain: '')
-                }
-              end,
-              pages: Compendium.all_pages,
-              compendium_domain: compendium_url
-            }
-          %>
-        </li>
-      <% end %>
     </ul>
 
     <% if current_modder.present? %>
