--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -15,7 +15,7 @@
                 link: modder_url(modder, subdomain: '')
               }
             end,
-            pages: Compendium.all_pages,
+            pages: Compendium.all_pages.filter { |page| page[:slug] !~ /\-mods$/ },
             compendium_domain: compendium_url
           }
         %>
