--- a/app/frontend/components/QuickSearch.scss
+++ b/app/frontend/components/QuickSearch.scss
@@ -14,6 +14,28 @@
       width: 480px;
       border-radius: 8px 8px 0 0;
     }
+
+    &::after {
+      display: none;
+    }
+  }
+
+  &::after {
+    content: "/";
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    padding: 4px 8px;
+    border-radius: 4px;
+    box-shadow: inset 0 0 0 1px $platinum;
+    z-index: 100;
+    pointer-events: none;
+    color: $platinum;
+
+    @include dark {
+      color: $panasonic;
+      box-shadow: inset 0 0 0 1px $panasonic;
+    }
   }
 
   .quick-search__control {
