--- a/app/frontend/entrypoints/compendium.scss
+++ b/app/frontend/entrypoints/compendium.scss
@@ -294,7 +294,7 @@ body.compendium.show {
       top: -1px;
     }
 
-    .stub-notice {
+    .notice {
       padding: 16px 24px 18px;
       background-color: var(--color-crystal);
       box-shadow: inset 0 0 0 1px var(--color-platinum);
