--- a/app/views/compendium/show.html.erb
+++ b/app/views/compendium/show.html.erb
@@ -13,19 +13,25 @@
     <%= nav_tree @nav %>
   </div>
   <section class="page span-9">
+
     <h1><%= @title %></h1>
+
     <% if @subtitle.present? %>
       <p class="big"><%= @subtitle %></p>
     <% end %>
-    <% if @stub %>
-      <p class="stub-notice">
-        This page does not currently follow our <a href="/contributing#content-guidelines">content guidelines</a>, and may be incomplete or missing key information. Want to help improve it? <%= link_to "Edit this page on GitHub", "https://github.com/dol-003/dol-003-web/edit/main/app/views/compendium/content/#{@path}" %> (and make sure to <a href="https://discord.gg/HwtPU7tkCT" target="_blank">join us on Discord</a> to discuss!)
-      </p>
+
+    <% if @notices.present? %>
+      <% @notices.each do |notice_type| %>
+        <%= render "notice_#{notice_type}" %>
+      <% end %>
     <% end %>
+
     <%= @content %>
+
     <footer>
       <%= link_to "Edit this page", "https://github.com/dol-003/dol-003-web/edit/main/lib/compendium/#{@path}" %> on GitHub. Learn more about <a href="/contributing">contributing to the Compendium</a>.
     </footer>
+
   </section>
 </div>
 
