--- a/app/views/application/vetting.html.erb
+++ b/app/views/application/vetting.html.erb
@@ -17,7 +17,7 @@
 
     <p>While informal and not authoritative, we believe vetting can be a way to incentivize quality work, great customer service, and relationship-building between CGCC modders and artists.</p>
 
-    <p><a href="https://discord.gg/HwtPU7tkCT" target="_blank">Join us on Discord</a> if you have any questions or concerns about the vetting status of a modder. Requests for vetting are considered on a case-by-case basis.</p>
+    <p><a href="https://discord.gg/HwtPU7tkCT" target="_blank">Join us on Discord</a> if you have any questions or concerns about vetting. Requests for vetting are considered on a case-by-case basis.</p>
 
   </div>
 </div>
