--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -48,10 +48,15 @@ body.modders {
           position: relative;
           top: -1px;
         }
+      }
 
-        .vetted {
-          margin-left: 8px;
-          display: flex;
+      .status {
+        margin: 12px 0 16px;
+        display: flex;
+        gap: 8px;
+
+        .status-pill {
+          display: inline-flex;
           align-items: center;
           padding: 0 12px;
           height: 24px;
@@ -60,31 +65,53 @@ body.modders {
           font-weight: bold;
           letter-spacing: 1px;
           line-height: 1;
-          background-color: var(--color-spice);
           color: var(--color-white);
           border-radius: 24px;
+          background-color: var(--color-platinum);
 
           @include dark {
-            background-color: var(--color-indigo);
+            background-color: var(--color-panasonic);
           }
 
-          @include medium {
-            position: absolute;
-            top: 40px;
-            left: 40px;
-            width: 24px;
-            font-size: 0;
-            padding-left: 8px;
-            margin: 0 24px 0 0;
-            pointer-events: none;
+          &.active,
+          &.inactive {
+            &::before {
+              content: "";
+              display: block;
+              width: 12px;
+              height: 12px;
+              border-radius: 12px;
+              margin: 0 6px 0 -2px;
+              box-shadow: inset 0 0 0 2px var(--color-white);
+            }
           }
 
-          svg {
-            top: 0;
-            width: 12px;
-            height: 12px;
-            margin: 0 6px 0 -2px;
+          &.active {
+            &::before {
+              background-color: var(--color-emerald);
+            }
           }
+
+          &.inactive {
+            &::before {
+              background-color: var(--color-mario);
+            }
+          }
+
+          &.vetted {
+            background-color: var(--color-spice);
+
+            @include dark {
+              background-color: var(--color-indigo);
+            }
+          }
+        }
+
+        svg {
+          top: 0;
+          width: 12px;
+          height: 12px;
+          margin: 0 6px 0 -2px;
         }
       }
 
