--- a/app/views/modders/index.html.erb
+++ b/app/views/modders/index.html.erb
@@ -119,10 +119,13 @@
             <p class="city">
               <%= inline_svg_tag 'pin.svg' %>
               <%= modder.city %>
-              <% if modder.vetted? %>
-                <%= link_to vetting_path, class: 'vetted', title: 'This modder has been vetted by an administrator. Click for more information.' do %><%= inline_svg_tag 'check.svg' %>Vetted<% end %>
-              <% end %>
             </p>
+            <div class="status">
+              <div class="status-pill <%= modder.status %>"><%= modder.status.titleize %></div>
+              <% if modder.vetted? %>
+                <%= link_to vetting_path, class: 'status-pill vetted', title: 'This modder has been vetted by an administrator. Click for more information.' do %><%= inline_svg_tag 'check.svg' %>Vetted<% end %>
+              <% end %>
+            </div>
           </div>
         </div>
         <div class="services">
