--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -38,7 +38,8 @@
         react_component "LocationSelector", {
           class: 'search',
           autosubmit: true,
-          geolocator: true
+          geolocator: true,
+          placeholder: 'Enter a location'
         }
       %>
       <%= form.submit 'Search', class: 'button' %>
