--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -48,7 +48,7 @@
 
     <h2>Start <strong>learning</strong></h2>
     <p>The Compendium is the ultimate hub for GCC modding knowledge.</p>
-    <p class="actions"><%= link_to 'View Compendium →', compendium_path, class: 'button secondary' %></p>
+    <p class="actions"><%= link_to 'View Compendium →', compendium_url, class: 'button secondary' %></p>
 
   </section>
 
