remove zip codes from cities

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -11,7 +11,7 @@
               {
                 slug: modder.slug,
                 name: modder.name,
-                city: modder.city,
+                city: modder.formatted_city,
                 logo_url: modder.logo.present? ? modder.logo_url : nil,
                 link: modder_url(modder, subdomain: '')
               }
