--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -77,7 +77,7 @@
         react_component "LocationSelector", {
           class: 'large',
           model_name: 'modder',
-          city: @modder.city,
+          city: @modder.formatted_city,
           latitude: @modder.latitude,
           longitude: @modder.longitude
         }
