--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -182,6 +182,7 @@
     <div class="span-4 caption">
       <%= form.label :status, 'Status', class: 'label large' %>
       <p class="small">Let people know whether you are currently active as a modder. This will show on your profile.</p>
+      <p class="small">In order to better surface active modders to prospective customers, you may be marked inactive after a few months without logging in.</p>
     </div>
 
     <div class="span-8 input-container">
