--- a/app/views/modders/show.html.erb
+++ b/app/views/modders/show.html.erb
@@ -55,7 +55,7 @@
         <div class="status">
           <div class="status-pill <%= @modder.status %>"><%= @modder.status.titleize %></div>
           <% if @modder.vetted? %>
-            <%= link_to vetting_path, class: 'status-pill vetted', title: 'This modder has been vetted by an administrator. Click for more information.' do %><%= inline_svg_tag 'check.svg' %>Vetted<% end %>
+            <%= link_to vetting_path, class: 'status-pill vetted', title: 'This modder has been vetted by an admin. Click for more information.' do %><%= inline_svg_tag 'check.svg' %>Vetted<% end %>
           <% end %>
         </div>
         <%= format_bio(@modder.bio) %>
