--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -5,6 +5,7 @@
       <p class="small">DOL-003.info is a repository of GameCube controller information and a directory of community modders. <%= link_to 'Learn more', about_url(subdomain: '') %></p>
       <p class="small">Modder info is provided for informational use only. DOL-003.info does not endorse any modder or modder-affiliated content presented.</p>
       <p class="small">© <%= Date.today.year %>. All rights reserved. Made with ♥ by <a href="https://twitter.com/mathssbm" target="_blank">Math</a>.</p>
+      <p class="small">As an Amazon Associate I earn from qualifying purchases. Affiliate income is used to cover website hosting costs.</p>
       <p class="small"><%= link_to 'Terms of Service', terms_url(subdomain: '') %> • <%= link_to 'Privacy Policy', privacy_url(subdomain: '') %> • <%= link_to 'House Rules', rules_url(subdomain: '') %></p>
     </div>
 
