--- a/app/frontend/form.scss
+++ b/app/frontend/form.scss
@@ -26,6 +26,10 @@
 
     & + .field {
       margin-top: 16px;
+
+      &.turnstile {
+        margin-top: 32px;
+      }
     }
 
     & + .actions {
